k8s/apps/seats-checkin/seats-checkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seats-checkin
  namespace: default
spec:
  ports:
  - name: port-8085
    port: 8085
    targetPort: 8085
  selector:
    app: seats-checkin
