k8s/apps/seats-checkin/seats-checkin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seats-checkin-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`checkin.example.com`)
    services:
    - name: seats-checkin
      port: 8085
  tls: {}
